# GMatElastoPlasticFiniteStrainSimo

./: .clang-format  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Cartesian2d_8h.html  Cartesian2d_8h_source.html  Cartesian2d_8hpp.html  Cartesian2d_8hpp_source.html  Cartesian2d__Array_8hpp.html  Cartesian2d__Array_8hpp_source.html  Cartesian3d_8hpp.html  Cartesian3d_8hpp_source.html  Cartesian3d__Array_8hpp.html  Cartesian3d__Array_8hpp_source.html  GMatElastoPlasticFiniteStrainSimo.pc.in  GMatElastoPlasticFiniteStrainSimoConfig.cmake  GMatElastoPlasticFiniteStrainSimoConfig.cmake.in  README.md  annotated.html  annotated_dup.js  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1Elastic-members.html  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1Elastic.html  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1Elastic.js  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1LinearHardening-members.html  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1LinearHardening.html  classGMatElastoPlasticFiniteStrainSimo_1_1Cartesian3d_1_1LinearHardening.js  classGMatTensor_1_1Cartesian2d_1_1Array-members.html  classGMatTensor_1_1Cartesian2d_1_1Array.html  classGMatTensor_1_1Cartesian3d_1_1Array-members.html  classGMatTensor_1_1Cartesian3d_1_1Array.html  classes.html  detail_8hpp.html  detail_8hpp_source.html  dir_4820306c479b58cea59def103c13194e.html  dir_4820306c479b58cea59def103c13194e.js  dir_a30c1e30e9db58567d664d3f1a80e9cc.html  environment_test.yaml  files.html  files_dup.js  functions.html  (+45 more)
.github/workflows/: ci.yml
docs/: api_cpp.rst  api_python.rst  conf.py  goose-article.cls  library.bib  readme.tex
docs/examples/: consistency.py  stress-strain.py
docs/theory/: library.bib  main.tex  readme.tex
docs/theory/examples/: consistency.py  stress-strain.py
include/GMatElastoPlasticFiniteStrainSimo/: Cartesian3d.h  Cartesian3d.hpp  Cartesian3d_Array.hpp  Cartesian3d_Elastic.hpp  Cartesian3d_LinearHardening.hpp  Cartesian3d_Matrix.hpp  Cartesian3d_eigvals.hpp  config.h  version.h  version.hpp
python/: main.cpp
python/GMatElastoPlasticFiniteStrainSimo/: Cartesian3d.py  __init__.py
search/: all_1.js  all_11.js  all_3.js  all_4.js  all_5.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_2.js  functions_1.js  functions_10.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  functions_e.js  namespaces_0.js  pages_0.js  typedefs_0.js
test/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  full_python.py
test/compare_versions/: Cartesian3d_check_v0.1.0.py  Cartesian3d_generate.py
tests/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  test_Cartesian3d.py  test_full_python.py  test_version.py
tests/compare_versions/: Cartesian3d_check_main.py  Cartesian3d_check_v0.1.0.py  Cartesian3d_generate.py
